[gd_scene load_steps=3 format=3 uid="uid://bi2jaa1745abe"]

[ext_resource type="Script" uid="uid://dconeme7quec5" path="res://src/modules/ui/menu/scripts/menu.gd" id="1_hkvl1"]
[ext_resource type="Texture2D" uid="uid://k8ky6u66i4xr" path="res://assets/images/ui/Main_menu_Gemini_Generated_Image.png" id="2_fsufg"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hkvl1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fsufg")
expand_mode = 1

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.5
offset_top = -50.5
offset_right = 117.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Container"]
layout_mode = 2
text = "Jogar"

[node name="CreditButton" type="Button" parent="Container"]
layout_mode = 2
text = "Cr√©ditos"

[node name="QuitButton" type="Button" parent="Container"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="Container/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Container/CreditButton" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="Container/QuitButton" to="." method="_on_quit_button_pressed"]
